--- a/angular/Company/src/app/employee/employee.component.css
+++ b/angular/Company/src/app/employee/employee.component.css
@@ -1,7 +1,65 @@
-p
+ p
 {
-    max-width: 100%;
+    max-width: 500px;
     margin: 0 auto;
     text-align: center;
-    color: red;
+   
+    overflow-wrap: break-word;
+}
+ .div1 > p:last-of-type
+{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.div1 > p:nth-last-of-type(2)
+{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: darkorange;
+}
+
+.div1 > p:nth-last-of-type(1) > input
+{
+    width: 500px;
+    margin-top: 20px;
+    
+}
+.cambiar-button
+{
+    max-width: 500px;
+    margin: 20px auto;
+    display: block;
+    padding: 5px;
+
+}
+form > p:first-of-type
+{
+    margin-top: 20px;
+}
+form > p:not(first-of-type)
+{
+    margin-top: 20px;
+}
+form > p:last-of-type{
+    margin-bottom: 30px;
+}
+.div2 > p
+{
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: center;
+   
+}
+.div2 > p > input[type ="button"]
+{
+    margin-left: 10px;
+}
+
+.div2 > p:last-of-type
+{
+    margin-bottom: 20px;
+}
+.div2 > p:not(:first-of-type)
+{
+    margin-top: 20px;
 }
