--- a/angular/Company/src/app/employee/employee.component.html
+++ b/angular/Company/src/app/employee/employee.component.html
@@ -1,1 +1,39 @@
-<p>Here will go an employee</p>
+<div class="div1">        
+    <p>Nombre del empleado: {{ nombre }}</p>
+    <p>Apellido del empleado: {{ apellido }}</p>
+    <p>Edad del empleado: {{ getEdad()>=18? " Mayor de edad":" Menor de edad"}}</p>
+    <p>Empresa del empleado: {{ empresa }}</p>
+
+<p>Esto se modificará segun vayas escribiendo, además habrá un corte en caso de que la palabra no contenga espacios y alcance el ancho de la pantalla definido: {{ changeText.value }} </p>
+
+<p>Introduce el texto que se modificará al momento mas arriba y el box del input ocupa todo el ancho disponible: <input type = "text" #changeText (keyup)="0"></p>
+
+</div>
+
+<form [formGroup]="form">
+
+    <p>Aquí empieza un form</p>
+
+    <p>Introduce la empresa: <input type="text" formControlName="nuevaEmpresa"></p>
+    <p>Introduce el apellido: <input type="text" formControlName="nuevoApellido"></p>
+  
+    <input class="cambiar-button" type="button" value="Cambiar" (click)="changeEmployeeForm()">
+
+    <p>Aquí termina un form</p>
+</form>
+
+<div class="div2">
+<p>habilitado con binding <input type = "text" [disabled] = "disableProperty"> <input type = "button" value ="cambiar estado" (click)="disableProperty = !disableProperty"></p>
+
+<p>Activar el checkbox a través de un binding</p>
+
+<p>Registrado: <input type="checkbox" id = "register" [checked]="userRegister" ></p>
+
+{{ getUserRegister() }}
+
+</div>
+
+
+
+
+  
