--- a/angular/Company/src/styles.css
+++ b/angular/Company/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+:root
+{
+    color-scheme: light dark;
+}
+body 
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    
+}
