--- a/angular/Gaming/src/styles.css
+++ b/angular/Gaming/src/styles.css
@@ -1,10 +1,11 @@
 :root
 {
-    color-scheme: ligth dark;
+    color-scheme: light dark;
+    background-color: aquamarine;
 }
 
 body
 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
+    background-color: #333;
+  color: #fff;
 }
