--- a/angular/EmpleadosForm_Proyecto_Crud_DDBB_firebase/src/app/app.component.css
+++ b/angular/EmpleadosForm_Proyecto_Crud_DDBB_firebase/src/app/app.component.css
@@ -1,37 +1,45 @@
-.navbar
-{
-   background-color: #333;
-   padding: 10px 20px;
-   display: flex;
-   justify-content: flex-end;
-   font-size: x-large;
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   
-}
-.nav-list
-{
-   list-style: none;
+body {
+   font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
-   margin-right: 10%;
-}
-.nav-item
-{
-   display:inline;
-   margin-right: 100px;
-}
-.nav-item a 
-{
+ }
+ .navbar {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   background-color: #333;
+   color: white;
+   padding: 10px 20px;
+ }
+ .nav-list {
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+   display: flex;
+ }
+ .nav-item {
+   margin-right: 20px;
+ }
+ .nav-item:last-child {
+   margin-right: 0;
+ }
+ .nav-item a {
    text-decoration: none;
    color: white;
-   font-weight: bold;
-   transition: color 0.3s;
-}
-.nav-item a:hover
-{
-   color: #ffd700;
-}
-.nav-item:last-child
-{
-   margin-right: 0;
-}
+   transition: color 0.3s ease;
+ }
+
+ .nav-item a:hover {
+   color: #ffc107; 
+ }
+ .login-section {
+   list-style-type: none;
+   display: flex;
+   align-items: center;
+ }
+ .login-section .nav-item {
+   margin-right: 10px;
+ }
+ .login-section .nav-item a:hover {
+   color: #ffc107; 
+ }
